--- a/src/Resources/app/administration/src/component/slides/form/content/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/content/template.html.twig
@@ -5,7 +5,7 @@
             gap
             padding
             :style="viewStyle({
-                mobile: { borderBottom: '1px solid #ddd' },
+                mobile: { borderBottom: '1px solid var(--color-border-primary-default)' },
             })">
 
             <blur-column
