--- a/src/Resources/app/administration/src/component/slides/form/slide/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/slide/template.html.twig
@@ -7,7 +7,7 @@
             :title="$tc('blurElysiumSlides.forms.slideBackground.label')"
             title-icon="blurph-paint-bucket-bold"
             :style="viewStyle({
-                mobile: { borderBottom: '1px solid #ddd' },
+                mobile: { borderBottom: '1px solid var(--color-border-primary-default)' },
             })">
 
             <blur-colorpicker
@@ -86,7 +86,7 @@
             gap
             padding
             :style="viewStyle({
-                mobile: { borderBottom: '1px solid #ddd' },
+                mobile: { borderBottom: '1px solid var(--color-border-primary-default)' },
             })"
             :title="$tc('blurElysium.general.spacing')"
             title-icon="blurph-ruler-bold">
