fix(#121): wrap inputs inside blur-column component on slide detail layouts

--- a/src/Resources/app/administration/src/component/slides/detail/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/detail/template.html.twig
@@ -98,8 +98,8 @@
 
                 <sw-tabs-item
                     :route="displayRoute"
-                    :title="$tc('blurElysiumSlides.settings.displayLabel')">
-                    {{ $tc('blurElysiumSlides.settings.displayLabel') }}
+                    :title="$tc('blurElysium.general.appearance')">
+                    {{ $tc('blurElysium.general.appearance') }}
                 </sw-tabs-item>
 
                 <sw-tabs-item
