--- a/src/Resources/app/administration/src/component/slides/form/linking/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/linking/template.html.twig
@@ -2,105 +2,101 @@
     gap
     padding>
 
-    <blur-select-input 
-        :style="deviceStyle({
-            mobile: { gridColumnEnd: 'span 12' },
-            tablet: { gridColumnEnd: 'span 6' },
-        })"
-        :options="[
-            { value: 'custom', label: $tc('blurElysiumSlides.forms.slideLinking.typeCustom') },
-            { value: 'product', label: $tc('blurElysiumSlides.forms.slideLinking.typeProduct') },
-        ]"
-        :hideClearableButton="true"
-        :label="$tc('blurElysiumSlides.forms.slideLinking.typeLabel')"
-        v-model:value="slide.slideSettings.slide.linking.type" />
+    <blur-column
+        :cols-tablet="6">
 
-    <blur-text-input
+        <blur-select-input 
+            :options="[
+                { value: 'custom', label: $tc('blurElysiumSlides.forms.slideLinking.typeCustom') },
+                { value: 'product', label: $tc('blurElysiumSlides.forms.slideLinking.typeProduct') },
+            ]"
+            :hideClearableButton="true"
+            :label="$tc('blurElysiumSlides.forms.slideLinking.typeLabel')"
+            v-model:value="slide.slideSettings.slide.linking.type" />
+    </blur-column>
+
+    <blur-column
         v-if="slide.slideSettings.slide?.linking?.type === 'custom'"
-        v-model:value="slide.url"
-        :style="deviceStyle({
-            mobile: { gridColumnEnd: 'span 12' },
-            tablet: { gridColumnEnd: 'span 6' },
-        })"
-        :label="$tc('blurElysiumSlides.forms.slideLinking.customUrl')"
-        :placeholder="$tc('blurElysiumSlides.forms.slideLinking.customUrlPlaceholder')"
-        :helpText="$tc('blurElysiumSlides.forms.slideLinking.customUrlHelpText')"
-    />
+        :cols-tablet="6">
 
-    <sw-entity-single-select 
+        <blur-text-input
+            v-model:value="slide.url"
+            :label="$tc('blurElysiumSlides.forms.slideLinking.customUrl')"
+            :placeholder="$tc('blurElysiumSlides.forms.slideLinking.customUrlPlaceholder')"
+            :helpText="$tc('blurElysiumSlides.forms.slideLinking.customUrlHelpText')"
+        />
+    </blur-column>
+
+    <blur-column
         v-else-if="slide.slideSettings.slide?.linking?.type === 'product'"
-        entity="product" 
-        class="blur-entity-select-input"
-        :style="deviceStyle({
-            mobile: { gridColumnEnd: 'span 12' },
-            tablet: { gridColumnEnd: 'span 6' },
-        })"
-        :label="$tc('blurElysiumSlides.forms.slideLinking.selectProduct')"
-        :error="validateProduct"
-        v-model:value="slide.productId" />
+        :cols-tablet="6">
 
-    <div
-        v-if="slide.slideSettings.slide?.linking?.type === 'product'"
-        :style="deviceStyle({
-            mobile: { gridColumnEnd: 'span 12' },
-        })">
+        <sw-entity-single-select 
+            entity="product" 
+            class="blur-entity-select-input"
+            :label="$tc('blurElysiumSlides.forms.slideLinking.selectProduct')"
+            :error="validateProduct"
+            v-model:value="slide.productId" />
+    </blur-column>
+
+    <blur-column
+        v-if="slide.slideSettings.slide?.linking?.type === 'product'">
+
         <mt-switch 
             @change="slide.slideSettings.slide.linking.showProductFocusImage = $event"
             :checked="slide.slideSettings.slide.linking.showProductFocusImage"
             :label="$tc('blurElysiumSlides.forms.slideLinking.showProductFocusImage')" />
-    </div>
+    </blur-column>
 
-    <blur-text-input
-        v-model:value="slide.buttonLabel" 
-        :style="deviceStyle({
-            mobile: { gridColumnEnd: 'span 12' },
-            tablet: { gridColumnEnd: 'span 6' },
-        })"
-        :label="$tc('blurElysiumSlides.forms.slideButtonLabel.label')"
-        :placeholder="$tc('blurElysiumSlides.forms.slideButtonLabel.placeholder')"
-        :helpText="$tc('blurElysiumSlides.forms.slideButtonLabel.helpText')"
-        :disabled="slide.slideSettings.slide.linking.overlay === true"
-    />
+    <blur-column
+        :cols-tablet="6">
 
-    <blur-select-input 
-        :style="deviceStyle({
-            mobile: { gridColumnEnd: 'span 12' },
-            tablet: { gridColumnEnd: 'span 6' },
-        })"
-        :label="$tc('blurElysiumSlides.forms.slideButtonAppearance.label')"
-        :helpText="$tc('blurElysiumSlides.forms.slideButtonAppearance.helpText')"
-        :disabled="slide.slideSettings.slide.linking.overlay === true"
-        :hideClearableButton="true"
-        :options="[
-            { value: 'primary', label: $tc('blurElysium.general.colorStates.primary') },
-            { value: 'secondary', label: $tc('blurElysium.general.colorStates.secondary') },
-            { value: 'success', label: $tc('blurElysium.general.colorStates.success') },
-            { value: 'danger', label: $tc('blurElysium.general.colorStates.danger') },
-            { value: 'warning', label: $tc('blurElysium.general.colorStates.warning') },
-            { value: 'info', label: $tc('blurElysium.general.colorStates.info') },
-            { value: 'light', label: $tc('blurElysium.general.colorStates.light') },
-            { value: 'dark', label: $tc('blurElysium.general.colorStates.dark') },
-        ]" 
-        v-model:value="slide.slideSettings.slide.linking.buttonAppearance" />
+        <blur-text-input
+            v-model:value="slide.buttonLabel" 
+            :label="$tc('blurElysiumSlides.forms.slideButtonLabel.label')"
+            :placeholder="$tc('blurElysiumSlides.forms.slideButtonLabel.placeholder')"
+            :helpText="$tc('blurElysiumSlides.forms.slideButtonLabel.helpText')"
+            :disabled="slide.slideSettings.slide.linking.overlay === true"
+        />
+    </blur-column>
 
-    <div :style="deviceStyle({
-        mobile: { gridColumnEnd: 'span 12' },
-        tablet: { gridColumnEnd: 'span 6' },
-    })">
+    <blur-column
+        :cols-tablet="6">
+
+        <blur-select-input 
+            :label="$tc('blurElysiumSlides.forms.slideButtonAppearance.label')"
+            :helpText="$tc('blurElysiumSlides.forms.slideButtonAppearance.helpText')"
+            :disabled="slide.slideSettings.slide.linking.overlay === true"
+            :hideClearableButton="true"
+            :options="[
+                { value: 'primary', label: $tc('blurElysium.general.colorStates.primary') },
+                { value: 'secondary', label: $tc('blurElysium.general.colorStates.secondary') },
+                { value: 'success', label: $tc('blurElysium.general.colorStates.success') },
+                { value: 'danger', label: $tc('blurElysium.general.colorStates.danger') },
+                { value: 'warning', label: $tc('blurElysium.general.colorStates.warning') },
+                { value: 'info', label: $tc('blurElysium.general.colorStates.info') },
+                { value: 'light', label: $tc('blurElysium.general.colorStates.light') },
+                { value: 'dark', label: $tc('blurElysium.general.colorStates.dark') },
+            ]" 
+            v-model:value="slide.slideSettings.slide.linking.buttonAppearance" />
+    </blur-column>
+
+    <blur-column
+        :cols-tablet="6">
+
         <mt-switch 
             @change="slide.slideSettings.slide.linking.openExternal = $event"
             :checked="slide.slideSettings.slide.linking.openExternal"
             :label="$tc('blurElysiumSlides.forms.slideLinkingOpenExternal')" />
-    </div>
+    </blur-column>
 
-    <div :style="deviceStyle({
-        mobile: { gridColumnEnd: 'span 12' },
-        tablet: { gridColumnEnd: 'span 6' },
-    })">
+    <blur-column
+        :cols-tablet="6">
+
         <mt-switch 
             @change="slide.slideSettings.slide.linking.overlay = $event"
             :checked="slide.slideSettings.slide.linking.overlay"
             :helpText="$tc('blurElysiumSlides.forms.slideLinkingOverlay.helpText')"
             :label="$tc('blurElysiumSlides.forms.slideLinkingOverlay.label')" />
-    </div>
+    </blur-column>
 </blur-section>
