--- a/src/Resources/app/administration/src/component/slides/form/slide/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/slide/template.html.twig
@@ -10,13 +10,13 @@
                 mobile: { borderBottom: '1px solid var(--color-border-primary-default)' },
             })">
 
-            <blur-colorpicker
-                :style="deviceStyle({
-                    mobile: { gridColumnEnd: 'span 12' },
-                    tablet: { gridColumnEnd: 'span 6' },
-                })" 
-                :label="$tc('blurElysium.general.backgroundColor')"
-                v-model:value="slide.slideSettings.slide.bgColor" />
+            <blur-column
+                :cols-tablet="6">
+
+                <blur-colorpicker
+                    :label="$tc('blurElysium.general.backgroundColor')"
+                    v-model:value="slide.slideSettings.slide.bgColor" />
+            </blur-column>
 
         </blur-section>
     </blur-column>
@@ -31,52 +31,51 @@
                 mobile: { borderBottom: '1px solid #ddd' },
             })">
 
-            <blur-colorpicker
-                :style="deviceStyle({
-                    mobile: { gridColumnEnd: 'span 12' },
-                    tablet: { gridColumnEnd: 'span 6' },
-                    desktop: { gridColumnEnd: 'span 3' },
-                })" 
-                :label="$tc('blurElysiumSlides.forms.slideGradient.startColor')"
-                v-model:value="slide.slideSettings.slide.bgGradient.startColor" />
+            <blur-column
+                :cols-tablet="6"
+                :cols-tablet="3">
 
-            <blur-colorpicker
-                :style="deviceStyle({
-                    mobile: { gridColumnEnd: 'span 12' },
-                    tablet: { gridColumnEnd: 'span 6' },
-                    desktop: { gridColumnEnd: 'span 3' },
-                })" 
-                :label="$tc('blurElysiumSlides.forms.slideGradient.endColor')"
-                v-model:value="slide.slideSettings.slide.bgGradient.endColor" />
+                <blur-colorpicker
+                    :label="$tc('blurElysiumSlides.forms.slideGradient.startColor')"
+                    v-model:value="slide.slideSettings.slide.bgGradient.startColor" />
+            </blur-column>
 
-            <blur-select-input 
-                :style="deviceStyle({
-                    mobile: { gridColumnEnd: 'span 12' },
-                    tablet: { gridColumnEnd: 'span 6' },
-                    desktop: { gridColumnEnd: 'span 3' },
-                })"
-                :options="[
-                    { value: 'linear-gradient', label: $tc('blurElysiumSlides.forms.slideGradient.gradientTypeLinear') }
-                ]"
-                :hideClearableButton="true"
-                :placeholder="$tc('blurElysiumSlides.forms.slideGradient.gradientTypeLinear')"
-                :label="$tc('blurElysiumSlides.forms.slideGradient.gradientType')"
-                v-model:value="slide.slideSettings.slide.bgGradient.gradientType" />
+            <blur-column
+                :cols-tablet="6"
+                :cols-tablet="3">
 
+                <blur-colorpicker
+                    :label="$tc('blurElysiumSlides.forms.slideGradient.endColor')"
+                    v-model:value="slide.slideSettings.slide.bgGradient.endColor" />
+            </blur-column>
 
-            <blur-number-input
-                type="int"
-                :style="deviceStyle({
-                    mobile: { gridColumnEnd: 'span 12' },
-                    tablet: { gridColumnEnd: 'span 6' },
-                    desktop: { gridColumnEnd: 'span 3' },
-                })"
-                :step="1"
-                :min="-360"
-                :max="360"
-                :label="$tc('blurElysiumSlides.forms.slideGradient.gradientDeg')"
-                v-model:value="slide.slideSettings.slide.bgGradient.gradientDeg" 
-            />
+            <blur-column
+                :cols-tablet="6"
+                :cols-tablet="3">
+
+                <blur-select-input 
+                    :options="[
+                        { value: 'linear-gradient', label: $tc('blurElysiumSlides.forms.slideGradient.gradientTypeLinear') }
+                    ]"
+                    :hideClearableButton="true"
+                    :placeholder="$tc('blurElysiumSlides.forms.slideGradient.gradientTypeLinear')"
+                    :label="$tc('blurElysiumSlides.forms.slideGradient.gradientType')"
+                    v-model:value="slide.slideSettings.slide.bgGradient.gradientType" />
+            </blur-column>
+
+            <blur-column
+                :cols-tablet="6"
+                :cols-tablet="3">
+
+                <blur-number-input
+                    type="int"
+                    :step="1"
+                    :min="-360"
+                    :max="360"
+                    :label="$tc('blurElysiumSlides.forms.slideGradient.gradientDeg')"
+                    v-model:value="slide.slideSettings.slide.bgGradient.gradientDeg" 
+                />
+            </blur-column>
 
         </blur-section>
     </blur-column>
@@ -91,44 +90,44 @@
             :title="$tc('blurElysium.general.spacing')"
             title-icon="blurph-ruler-bold">
 
-            <blur-number-input 
-                :label="$tc('blurElysium.general.paddingX')"
-                :device="deviceView"
-                :placeholder="devicePlaceholder('slide.paddingX', 15)"
-                :style="deviceStyle({
-                    mobile: { gridColumnEnd: 'span 12' },
-                    tablet: { gridColumnEnd: 'span 6' },
-                    desktop: { gridColumnEnd: 'span 3' },
-                })"
-                :show-device="true"
-                @on-device="deviceSwitch"
-                v-model:value="slideViewportSettings.slide.paddingX" /> 
+            <blur-column
+                :cols-tablet="6"
+                :cols-tablet="3">
 
-            <blur-number-input 
-                :label="$tc('blurElysium.general.paddingY')"
-                :device="deviceView"
-                :placeholder="devicePlaceholder('slide.paddingY', 15)"
-                :style="deviceStyle({
-                    mobile: { gridColumnEnd: 'span 12' },
-                    tablet: { gridColumnEnd: 'span 6' },
-                    desktop: { gridColumnEnd: 'span 3' },
-                })"
-                :show-device="true"
-                @on-device="deviceSwitch"
-                v-model:value="slideViewportSettings.slide.paddingY" /> 
+                <blur-number-input 
+                    :label="$tc('blurElysium.general.paddingX')"
+                    :device="deviceView"
+                    :placeholder="devicePlaceholder('slide.paddingX', 15)"
+                    :show-device="true"
+                    @on-device="deviceSwitch"
+                    v-model:value="slideViewportSettings.slide.paddingX" />
+            </blur-column>
 
-            <blur-number-input 
-                :label="$tc('blurElysium.general.borderRadius')"
-                :device="deviceView"
-                :placeholder="devicePlaceholder('slide.borderRadius', 15)"
-                :style="deviceStyle({
-                    mobile: { gridColumnEnd: 'span 12' },
-                    tablet: { gridColumnEnd: 'span 6' },
-                    desktop: { gridColumnEnd: 'span 3' },
-                })"
-                :show-device="true"
-                @on-device="deviceSwitch"
-                v-model:value="slideViewportSettings.slide.borderRadius" /> 
+            <blur-column
+                :cols-tablet="6"
+                :cols-tablet="3">
+
+                <blur-number-input 
+                    :label="$tc('blurElysium.general.paddingY')"
+                    :device="deviceView"
+                    :placeholder="devicePlaceholder('slide.paddingY', 15)"
+                    :show-device="true"
+                    @on-device="deviceSwitch"
+                    v-model:value="slideViewportSettings.slide.paddingY" />
+            </blur-column>
+
+            <blur-column
+                :cols-tablet="6"
+                :cols-tablet="3">
+
+                <blur-number-input 
+                    :label="$tc('blurElysium.general.borderRadius')"
+                    :device="deviceView"
+                    :placeholder="devicePlaceholder('slide.borderRadius', 15)"
+                    :show-device="true"
+                    @on-device="deviceSwitch"
+                    v-model:value="slideViewportSettings.slide.borderRadius" /> 
+            </blur-column>
 
         </blur-section>
     </blur-column>
@@ -141,41 +140,41 @@
             :description="$tc('blurElysiumSlides.forms.displaySlide.alignmentDescription')"
             title-icon="blurph-arrows-out-line-horizontal-bold">
 
-            <blur-select-input 
-                :style="deviceStyle({
-                    mobile: { gridColumnEnd: 'span 12' },
-                    tablet: { gridColumnEnd: 'span 6' },
-                    desktop: { gridColumnEnd: 'span 3' },
-                })"
-                :label="$tc('blurElysium.general.alignX.label')" 
-                :placeholder="devicePlaceholder('slide.justifyContent', 'center', 'blurElysium.general.alignX')"
-                :device="deviceView"
-                :show-device="true"
-                :options="[
-                    { value: 'flex-start', label: $tc('blurElysium.general.alignX.flexStart') },
-                    { value: 'center', label: $tc('blurElysium.general.alignX.center') },
-                    { value: 'flex-end', label: $tc('blurElysium.general.alignX.flexEnd') }
-                ]"
-                @on-device="deviceSwitch"
-                v-model:value="slideViewportSettings.slide.justifyContent" />
+            <blur-column
+                :cols-tablet="6"
+                :cols-tablet="3">
 
-            <blur-select-input 
-                :style="deviceStyle({
-                    mobile: { gridColumnEnd: 'span 12' },
-                    tablet: { gridColumnEnd: 'span 6' },
-                    desktop: { gridColumnEnd: 'span 3' },
-                })"
-                :label="$tc('blurElysium.general.alignY.label')" 
-                :placeholder="devicePlaceholder('slide.alignItems', 'center', 'blurElysium.general.alignY')"
-                :device="deviceView"
-                :show-device="true"
-                :options="[
-                    { value: 'flex-start', label: $tc('blurElysium.general.top') },
-                    { value: 'center', label: $tc('blurElysium.general.center') },
-                    { value: 'flex-end', label: $tc('blurElysium.general.bottom') }
-                ]"
-                @on-device="deviceSwitch"
-                v-model:value="slideViewportSettings.slide.alignItems" />
+                <blur-select-input 
+                    :label="$tc('blurElysium.general.alignX.label')" 
+                    :placeholder="devicePlaceholder('slide.justifyContent', 'center', 'blurElysium.general.alignX')"
+                    :device="deviceView"
+                    :show-device="true"
+                    :options="[
+                        { value: 'flex-start', label: $tc('blurElysium.general.alignX.flexStart') },
+                        { value: 'center', label: $tc('blurElysium.general.alignX.center') },
+                        { value: 'flex-end', label: $tc('blurElysium.general.alignX.flexEnd') }
+                    ]"
+                    @on-device="deviceSwitch"
+                    v-model:value="slideViewportSettings.slide.justifyContent" />
+            </blur-column>
+
+            <blur-column
+                :cols-tablet="6"
+                :cols-tablet="3">
+
+                <blur-select-input 
+                    :label="$tc('blurElysium.general.alignY.label')" 
+                    :placeholder="devicePlaceholder('slide.alignItems', 'center', 'blurElysium.general.alignY')"
+                    :device="deviceView"
+                    :show-device="true"
+                    :options="[
+                        { value: 'flex-start', label: $tc('blurElysium.general.top') },
+                        { value: 'center', label: $tc('blurElysium.general.center') },
+                        { value: 'flex-end', label: $tc('blurElysium.general.bottom') }
+                    ]"
+                    @on-device="deviceSwitch"
+                    v-model:value="slideViewportSettings.slide.alignItems" />
+            </blur-column>
 
         </blur-section>
     </blur-column>
