fix(#124): set slider breakpoint settings to initial object

--- a/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/settings/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/settings/template.html.twig
@@ -37,6 +37,7 @@
             })"
             :label="$tc('blurElysiumSlider.config.settings.slidesPerPage.label')"
             :placeholder="viewportsPlaceholder('settings.slidesPerPage', 1)"
+            :min="1"
             :show-device="true"
             :device="deviceView"
             :unit="false"
