--- a/src/Resources/views/storefront/component/blur-elysium-slide/default/slide.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slide/default/slide.html.twig
@@ -41,7 +41,8 @@
     {% block blur_elysium_slide %}
 
         <div class="{{ slideClasses|join(' ') }}{% if slideData.slideSettings.slide.cssClass %} {{ slideData.slideSettings.slide.cssClass }}{% endif %}"
-            data-elysium-slide-id="{{ slideData.id }}">
+            data-elysium-slide-id="{{ slideData.id }}"
+            style="aspect-ratio: var(--slide-aspect-ratio, auto);">
 
             {% block blur_elysium_slide_prepend %}{% endblock %}
             
