chore: extend changelog, set version to 3.5.0

--- a/src/Resources/app/administration/src/component/slides/form/container/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/container/template.html.twig
@@ -140,7 +140,7 @@
 
                 <blur-select-input 
                     :label="$tc('blurElysium.general.jusitifyContent')" 
-                    :placeholder="devicePlaceholder('container.justifyContent', 'normal', 'blurElysium.general.alignX')"
+                    :placeholder="devicePlaceholder('container.justifyContent', 'normal', 'blurElysium.general')"
                     :device="deviceView"
                     :show-device="true"
                     :options="[
@@ -162,7 +162,7 @@
 
                 <blur-select-input 
                     :label="$tc('blurElysium.general.alignItems')" 
-                    :placeholder="devicePlaceholder('container.alignItems', 'center', 'blurElysium.general.alignX')"
+                    :placeholder="devicePlaceholder('container.alignItems', 'center', 'blurElysium.general')"
                     :device="deviceView"
                     :show-device="true"
                     :options="[
