fix(#128, #131): correct translations, remove console logging

--- a/src/Resources/app/administration/src/component/slides/form/cover/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/cover/template.html.twig
@@ -88,8 +88,7 @@
             :cols-desktop="4">
 
             <blur-section
-                gap-y
-                :description="$tc('blurElysiumSlides.forms.slideCoverMediaSettings.description')">
+                gap-y>
 
                 <blur-column>
                     <blur-select-input 
