add drop action method on cms-section

--- a/src/Resources/app/administration/src/extension/sw-cms-section/template.html.twig
+++ b/src/Resources/app/administration/src/extension/sw-cms-section/template.html.twig
@@ -1,7 +1,8 @@
 <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
 {% block sw_cms_section_content %}
     <template v-if="section.type === 'blur-elysium-section'">
-        @todo:ELYSIUM_SECTION_COMPONENT
+        <blur-elysium-cms-section 
+            :section="section" />
     </template>
     <template v-else>
         {% parent %}
