--- a/src/Resources/app/administration/src/component/cms/section/style.scss
+++ b/src/Resources/app/administration/src/component/cms/section/style.scss
@@ -3,22 +3,9 @@
     grid-column: var(--blur-elysium-section-block-col-start, auto) / span var(--blur-elysium-section-block-col-end, 12);
     grid-row: var(--blur-elysium-section-block-row-start, 1) / span var(--blur-elysium-section-block-row-end, auto);
 
-    &:after {
-        // content: '';
-        // display: block;
-        // position: absolute;
-        // inset: 0 auto 0 100%;
-        // height: 100%;
-        // z-index: 10;
-        // width: 3px;
-        // background-color: #000;
-        // border-radius: 44px;
-        // opacity: 0;
-        // transition: all 200ms;
-    }
-
-    &:hover {
-        &:after,
+    &:hover,
+    &:focus,
+    &:active {
         .blur-elysium-section-block-resizer {
             opacity: 1;
         }
@@ -31,10 +18,10 @@
     inset: 0 auto 0 100%;
     height: 100%;
     z-index: 10;
-    width: 5px;
-    background-color: #000;
+    width: 4px;
+    background-color: var(--block-resizer-bg, var(--color-interaction-primary-default));
     border-radius: 44px;
     opacity: 0;
     transition: all 200ms;
-    cursor: pointer;
+    cursor: e-resize;
 }
