minor improvements to dragging

--- a/src/Resources/app/administration/src/component/cms/section/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/section/template.html.twig
@@ -24,6 +24,7 @@
             <div class="blur-elysium-section-block-resizer" 
                 draggable="true" 
                 @dragstart="$event => startBlockResizeX($event, block, index)"
+                @dragend="endBlockResizeX"
                 @drag="dragBlockResizingX" />
 
             <component
